--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,14 +1,34 @@
-.superInput {
+
+
+
+.input {
+    box-sizing: border-box;
     margin:  10px;
-    background-color: #224802;
-    color: #79f595;
+    display: block;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #d7e9ff;
+    background-clip: padding-box;
+    border-radius: 0.5rem;
+    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    border: 2px solid #80a6ff;
 }
-
+.input:focus {
+    outline: 2px solid #80a6ff;
+    transition: outline 0.3s ease-in-out, outline 0.3s ease-in-out;
+}
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    border: 2px solid #ff5959;
+    background-color: #ffa6a6;
 }
-
 .error {
-    color: red;
+    font-family: inherit;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #ff5959;
 }
