--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,16 @@
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li
+ {
+    margin: 0;
+}
+
 .App {
-    background-color: #5b5b5b;
+    background-color: #444343;
 }
