--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
     margin:  10px;
     display: block;
-    height: calc(2.25rem + 2px);
-    padding: 0.375rem 0.75rem;
+    height: 2.25rem;
+    padding: 0.25rem 0.5rem;
     font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
