--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -20,7 +20,7 @@
 .angel {
     width: 15px;
     height: 15px;
-    background: radial-gradient(circle at 0 0, #444343 15px, #79f595 0);
+    background: radial-gradient(circle at 0 0, #878c86 15px, #79f595 0);
 }
 
 .name {
